--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Terraform Init
         run: terraform init
       - name: Terraform Format
-        run: terraform fmt -check
+        run: terraform fmt
       - name: Terraform Plan
         run: terraform plan
       - name: Terraform Apply
